--- a/TreinaWebJEE/WebContent/WEB-INF/web.xml
+++ b/TreinaWebJEE/WebContent/WEB-INF/web.xml
@@ -7,16 +7,16 @@
     <welcome-file>index.htm</welcome-file>
   </welcome-file-list>
   
-  <servlet>
-  	<servlet-name>ServletExemplo1</servlet-name>
-  	<servlet-class>br.com.treinaweb.jee.servlets.ServletExemplo1</servlet-class>
-  	<init-param>
-  		<param-name>mensagem</param-name>
-  		<param-value>Bem vindo ao teste de Servlets!</param-value>
-  	</init-param>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>ServletExemplo1</servlet-name>
-  	<url-pattern>/SvtEx1</url-pattern>
-  </servlet-mapping>
+<!--   <servlet> -->
+<!--   	<servlet-name>ServletExemplo1</servlet-name> -->
+<!--   	<servlet-class>br.com.treinaweb.jee.servlets.ServletExemplo1</servlet-class> -->
+<!--   	<init-param> -->
+<!--   		<param-name>mensagem</param-name> -->
+<!--   		<param-value>Bem vindo ao teste de Servlets!</param-value> -->
+<!--   	</init-param> -->
+<!--   </servlet> -->
+<!--   <servlet-mapping> -->
+<!--   	<servlet-name>ServletExemplo1</servlet-name> -->
+<!--   	<url-pattern>/SvtEx1</url-pattern> -->
+<!--   </servlet-mapping> -->
 </web-app>
